[CDAP-9377] fixed bug where source column collapses in Firefox, and increased its width fixed bug where few logs expanded to take up whole screen fetches logs one last time after preview/pipeline stops

--- a/cdap-ui/app/logviewer/logviewer.less
+++ b/cdap-ui/app/logviewer/logviewer.less
@@ -75,26 +75,12 @@ body.state-logviewerhome {
       height: ~"calc(100vh - 277px)";
       height: ~"-moz-calc(100vh - 277px)";
       height: ~"-webkit-calc(100vh - 277px)";
-
-      /* 46px: header */
-      /* had to set this for scrollbar to show up on Firefox */
-      tbody {
-        height: ~"calc(100vh - 277px - 46px)";
-        height: ~"-moz-calc(100vh - 277px - 46px)";
-        height: ~"-webkit-calc(100vh - 277px - 46px)";
-      }
     }
 
     &.full-screen .logs-table {
       height: ~"calc(100vh - 166px)";
       height: ~"-moz-calc(100vh - 166px)";
       height: ~"-webkit-calc(100vh - 166px)";
-
-      tbody {
-        height: ~"calc(100vh - 166px - 46px)";
-        height: ~"-moz-calc(100vh - 166px - 46px)";
-        height: ~"-webkit-calc(100vh - 166px - 46px)";
-      }
     }
   }
 }
